--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A262e" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A278b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -7,9 +7,8 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TodayViewController">
             <connections>
-                <outlet property="dictController" destination="oaF-a3-DKm" id="Wsj-gP-LPz"/>
                 <outlet property="inputText" destination="p6U-Vm-Jkp" id="9pp-dC-9Ak"/>
-                <outlet property="outputText" destination="PPu-eZ-HN3" id="W6m-bc-UfZ"/>
+                <outlet property="outputText" destination="62t-eA-VkA" id="FK6-Re-YYn"/>
                 <outlet property="sourceLanguageMenu" destination="Ir4-fd-QH2" id="GFC-dO-ZLl"/>
                 <outlet property="sourceSegmentedButton" destination="zqb-PA-hYv" id="vxy-Jz-8zV"/>
                 <outlet property="targetLanguageMenu" destination="IVZ-5j-MVh" id="vHI-Ia-fd6"/>
@@ -19,13 +18,14 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
+        <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="316" height="422"/>
             <subviews>
-                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
-                    <rect key="frame" x="20" y="275" width="271" height="97"/>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
+                    <rect key="frame" x="20" y="275" width="240" height="97"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="97" id="WnO-C2-spV"/>
+                        <constraint firstAttribute="height" constant="97" id="Qfk-Jj-H9W"/>
+                        <constraint firstAttribute="width" constant="240" id="x5W-sd-w4o"/>
                     </constraints>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" drawsBackground="YES" id="odk-Sj-ZhX">
@@ -37,11 +37,11 @@
                         <outlet property="delegate" destination="-2" id="LUe-qC-Npw"/>
                     </connections>
                 </textField>
-                <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
+                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
                     <rect key="frame" x="20" y="379" width="240" height="23"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="Dzd-Ax-Suh"/>
-                        <constraint firstAttribute="width" constant="210" id="N4k-fl-DVQ"/>
+                        <constraint firstAttribute="width" constant="240" id="5Ez-CN-dDg"/>
+                        <constraint firstAttribute="height" constant="22" id="Hdd-x0-PTr"/>
                     </constraints>
                     <animations/>
                     <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="RNt-q7-X9c">
@@ -54,15 +54,16 @@
                                 <menu key="menu" id="Ir4-fd-QH2"/>
                             </segment>
                         </segments>
+                        <connections>
+                            <action selector="sourceTabClick:" target="-2" id="iRy-7w-6Pz"/>
+                        </connections>
                     </segmentedCell>
-                    <connections>
-                        <action selector="sourceSelectedLang:" target="-2" id="zyR-o1-VsA"/>
-                    </connections>
                 </segmentedControl>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
                     <rect key="frame" x="104" y="225" width="103" height="42"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="42" id="7WO-9r-c7q"/>
+                        <constraint firstAttribute="width" constant="103" id="5iB-Yg-GPs"/>
+                        <constraint firstAttribute="height" constant="42" id="ZNz-ft-4Qy"/>
                     </constraints>
                     <animations/>
                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwitchArrows" imagePosition="below" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="QU2-fI-R09">
@@ -73,11 +74,11 @@
                         <action selector="swapButton:" target="-2" id="XHZ-tW-hdN"/>
                     </connections>
                 </button>
-                <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79" customClass="SeparatedButton">
+                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79" customClass="SeparatedButton">
                     <rect key="frame" x="20" y="194" width="240" height="23"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="22" id="QOC-S0-mHm"/>
-                        <constraint firstAttribute="width" constant="210" id="tbF-1h-NQ7"/>
+                        <constraint firstAttribute="width" constant="240" id="U4G-rN-tVT"/>
+                        <constraint firstAttribute="height" constant="22" id="xOh-nV-HG4"/>
                     </constraints>
                     <animations/>
                     <segmentedCell key="cell" borderStyle="border" alignment="left" style="capsule" trackingMode="selectOne" id="pCn-0v-RPQ">
@@ -92,28 +93,17 @@
                         </segments>
                     </segmentedCell>
                     <connections>
-                        <action selector="targetSelectedLang:" target="-2" id="ZnZ-K5-Kr6"/>
+                        <action selector="targetTabClick:" target="-2" id="xtA-3B-DB2"/>
                     </connections>
                 </segmentedControl>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AQ3-aI-xJE">
-                    <rect key="frame" x="20" y="90" width="271" height="97"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="62t-eA-VkA">
+                    <rect key="frame" x="18" y="155" width="244" height="17"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="97" id="fYb-Wc-m11"/>
+                        <constraint firstAttribute="height" constant="17" id="QcW-ta-ibb"/>
+                        <constraint firstAttribute="width" constant="240" id="ea7-VI-gBx"/>
                     </constraints>
                     <animations/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" drawsBackground="YES" id="3ch-YK-wW3">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" red="0.14888422106190452" green="0.14854765620039059" blue="0.14958278795811519" alpha="0.61305961879432624" colorSpace="calibratedRGB"/>
-                    </textFieldCell>
-                </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PPu-eZ-HN3">
-                    <rect key="frame" x="38" y="53" width="251" height="17"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="17" id="Qku-Fd-kIf"/>
-                    </constraints>
-                    <animations/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="cL9-Tx-6Dv">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="zir-R0-TEH">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -121,31 +111,21 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="90" id="2Qs-Zg-Rhw"/>
-                <constraint firstAttribute="trailing" secondItem="p6U-Vm-Jkp" secondAttribute="trailing" constant="25" id="AjG-6E-hC8"/>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="8" id="Byx-Zr-Yb6"/>
-                <constraint firstAttribute="trailing" secondItem="xtp-nf-q79" secondAttribute="trailing" constant="25" id="KcJ-CQ-dRa"/>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="104" id="Lf6-wa-oQ0"/>
-                <constraint firstItem="PPu-eZ-HN3" firstAttribute="top" secondItem="AQ3-aI-xJE" secondAttribute="bottom" constant="20" id="PaR-dc-q25"/>
-                <constraint firstItem="AQ3-aI-xJE" firstAttribute="top" secondItem="xtp-nf-q79" secondAttribute="bottom" constant="8" id="REC-Ac-KIe"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="zqb-PA-hYv" secondAttribute="bottom" constant="8" id="TO5-rY-nY5"/>
-                <constraint firstItem="xtp-nf-q79" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="Uwt-8Y-Ibs"/>
-                <constraint firstAttribute="trailing" secondItem="cZ1-fA-h2i" secondAttribute="trailing" constant="109" id="a9F-LD-grj"/>
-                <constraint firstItem="zqb-PA-hYv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="bgj-Pa-LL9"/>
-                <constraint firstAttribute="bottom" secondItem="PPu-eZ-HN3" secondAttribute="bottom" constant="53" id="jhj-8Z-qtG"/>
-                <constraint firstItem="PPu-eZ-HN3" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="40" id="mPp-x0-Exc"/>
-                <constraint firstAttribute="trailing" secondItem="AQ3-aI-xJE" secondAttribute="trailing" constant="25" id="ogZ-Ro-Shj"/>
-                <constraint firstItem="AQ3-aI-xJE" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vfI-W2-Ojy"/>
-                <constraint firstItem="zqb-PA-hYv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="vl0-Ni-a4f"/>
-                <constraint firstAttribute="trailing" secondItem="zqb-PA-hYv" secondAttribute="trailing" constant="25" id="yKt-rm-9Nu"/>
-                <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="8" id="yUS-KK-8iX"/>
-                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="yfF-2M-ft1"/>
+                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="zqb-PA-hYv" secondAttribute="bottom" constant="8" id="ExB-cm-qnu"/>
+                <constraint firstItem="62t-eA-VkA" firstAttribute="top" secondItem="xtp-nf-q79" secondAttribute="bottom" constant="23" id="K3g-gq-ty3"/>
+                <constraint firstItem="p6U-Vm-Jkp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="YJq-Ym-5he"/>
+                <constraint firstItem="zqb-PA-hYv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="fwM-vV-wWO"/>
+                <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="8" id="hPp-FG-dDk"/>
+                <constraint firstAttribute="bottom" secondItem="62t-eA-VkA" secondAttribute="bottom" constant="155" id="nNJ-W2-dVF"/>
+                <constraint firstItem="zqb-PA-hYv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="orB-UX-dkf"/>
+                <constraint firstItem="62t-eA-VkA" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="r8l-Pn-AkX"/>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="8" id="rnn-4h-LMr"/>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="104" id="vAg-pl-KB4"/>
+                <constraint firstItem="xtp-nf-q79" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="x5X-i5-y8m"/>
             </constraints>
             <animations/>
             <point key="canvasLocation" x="307" y="357"/>
         </customView>
-        <userDefaultsController representsSharedInstance="YES" id="LUh-os-41e"/>
-        <dictionaryController objectClassName="_NSDictionaryControllerKeyValuePair" automaticallyPreparesContent="YES" id="oaF-a3-DKm"/>
     </objects>
     <resources>
         <image name="SwitchArrows" width="171" height="77"/>
