--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -18,10 +18,10 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
+        <customView misplaced="YES" simulatedAppContext="notificationCenter" translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
             <rect key="frame" x="0.0" y="0.0" width="316" height="422"/>
             <subviews>
-                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
+                <textField verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p6U-Vm-Jkp">
                     <rect key="frame" x="20" y="275" width="240" height="97"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="97" id="Qfk-Jj-H9W"/>
@@ -37,7 +37,7 @@
                         <outlet property="delegate" destination="-2" id="LUe-qC-Npw"/>
                     </connections>
                 </textField>
-                <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
+                <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zqb-PA-hYv" customClass="SeparatedButton">
                     <rect key="frame" x="20" y="379" width="240" height="23"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="240" id="5Ez-CN-dDg"/>
@@ -56,21 +56,6 @@
                         </segments>
                     </segmentedCell>
                 </segmentedControl>
-                <button translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
-                    <rect key="frame" x="104" y="225" width="103" height="42"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="103" id="5iB-Yg-GPs"/>
-                        <constraint firstAttribute="height" constant="42" id="ZNz-ft-4Qy"/>
-                    </constraints>
-                    <animations/>
-                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwitchArrows" imagePosition="below" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="QU2-fI-R09">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="swapButton:" target="-2" id="XHZ-tW-hdN"/>
-                    </connections>
-                </button>
                 <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79" customClass="SeparatedButton">
                     <rect key="frame" x="20" y="194" width="240" height="23"/>
                     <constraints>
@@ -100,21 +85,37 @@
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" id="zir-R0-TEH">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cZ1-fA-h2i">
+                    <rect key="frame" x="106" y="225" width="78" height="52"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="78" id="dYl-NJ-vQM"/>
+                        <constraint firstAttribute="height" constant="52" id="hgd-gt-jUO"/>
+                    </constraints>
+                    <animations/>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwitchArrows" imagePosition="below" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="QU2-fI-R09">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="swapButton:" target="-2" id="XHZ-tW-hdN"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="zqb-PA-hYv" secondAttribute="bottom" constant="103" id="0wc-l6-5YI"/>
+                <constraint firstAttribute="trailing" secondItem="cZ1-fA-h2i" secondAttribute="trailing" constant="142" id="2du-JD-hNV"/>
                 <constraint firstItem="p6U-Vm-Jkp" firstAttribute="top" secondItem="zqb-PA-hYv" secondAttribute="bottom" constant="8" id="ExB-cm-qnu"/>
                 <constraint firstItem="62t-eA-VkA" firstAttribute="top" secondItem="xtp-nf-q79" secondAttribute="bottom" constant="23" id="K3g-gq-ty3"/>
                 <constraint firstItem="p6U-Vm-Jkp" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="YJq-Ym-5he"/>
+                <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="18" id="ehm-h0-pUT"/>
                 <constraint firstItem="zqb-PA-hYv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="fwM-vV-wWO"/>
-                <constraint firstItem="xtp-nf-q79" firstAttribute="top" secondItem="cZ1-fA-h2i" secondAttribute="bottom" constant="8" id="hPp-FG-dDk"/>
                 <constraint firstAttribute="bottom" secondItem="62t-eA-VkA" secondAttribute="bottom" constant="155" id="nNJ-W2-dVF"/>
+                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="106" id="oQ9-vz-lLF"/>
                 <constraint firstItem="zqb-PA-hYv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="orB-UX-dkf"/>
                 <constraint firstItem="62t-eA-VkA" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="r8l-Pn-AkX"/>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="top" secondItem="p6U-Vm-Jkp" secondAttribute="bottom" constant="8" id="rnn-4h-LMr"/>
-                <constraint firstItem="cZ1-fA-h2i" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="104" id="vAg-pl-KB4"/>
                 <constraint firstItem="xtp-nf-q79" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="x5X-i5-y8m"/>
             </constraints>
             <animations/>
