--- a/todayWidget/TodayViewController.xib
+++ b/todayWidget/TodayViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A262e" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="7706" systemVersion="15A278b" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7706"/>
@@ -14,6 +14,7 @@
                 <outlet property="targetLanguageMenu" destination="Yt6-Cr-4dE" id="XAd-od-3sJ"/>
                 <outlet property="targetSegmentedButton" destination="xtp-nf-q79" id="r9w-fH-eSF"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="widgetMainView" destination="Hz6-mo-xeY" id="yZr-r0-xbo"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -55,6 +56,9 @@
                             </segment>
                         </segments>
                     </segmentedCell>
+                    <connections>
+                        <action selector="sourceTabClick:" target="-2" id="MkZ-Ai-GMJ"/>
+                    </connections>
                 </segmentedControl>
                 <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xtp-nf-q79" customClass="SeparatedButton">
                     <rect key="frame" x="20" y="194" width="240" height="23"/>
@@ -74,6 +78,9 @@
                             </segment>
                         </segments>
                     </segmentedCell>
+                    <connections>
+                        <action selector="targetTabClick:" target="-2" id="WYE-hV-Qii"/>
+                    </connections>
                 </segmentedControl>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="62t-eA-VkA">
                     <rect key="frame" x="18" y="155" width="244" height="17"/>
